@@ -49,6 +49,7 @@ Unreleased.
 - Color run_simple's terminal output based on HTTP codes ``#1013``.
 - Fix self-XSS in debugger console, see ``#1031``.
 - Fix IPython 5.x shell support, see ``#1033``.
+- Don't sent `Content-Length` header on 1XX or 204 responses ``1025``.
 
 Version 0.11.16
 ---------------
